--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/packages.config
@@ -1,9 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="akavache" version="5.0.0" targetFramework="monoandroid71" />
+  <package id="akavache.core" version="5.0.0" targetFramework="monoandroid71" />
+  <package id="akavache.sqlite3" version="5.0.0" targetFramework="monoandroid71" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="monoandroid60" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid60" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="monoandroid60" />
+  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="monoandroid71" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="monoandroid71" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="monoandroid71" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="monoandroid71" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="monoandroid71" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="monoandroid71" />
   <package id="SkiaSharp" version="1.59.1" targetFramework="monoandroid60" />
+  <package id="Splat" version="1.6.0" targetFramework="monoandroid71" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="1.1.0" targetFramework="monoandroid71" />
+  <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="monoandroid71" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.0" targetFramework="monoandroid71" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
