--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.iOS/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.iOS/packages.config
@@ -1,8 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="akavache" version="5.0.0" targetFramework="xamarinios10" />
+  <package id="akavache.core" version="5.0.0" targetFramework="xamarinios10" />
+  <package id="akavache.sqlite3" version="5.0.0" targetFramework="xamarinios10" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="xamarinios10" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="xamarinios10" />
+  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="xamarinios10" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="xamarinios10" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="xamarinios10" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="xamarinios10" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="xamarinios10" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="xamarinios10" />
   <package id="SkiaSharp" version="1.59.1" targetFramework="xamarinios10" />
+  <package id="Splat" version="1.6.0" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.ios_unified.static" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.provider.internal.ios_unified" version="1.1.0" targetFramework="xamarinios10" />
   <package id="WebP.Touch" version="1.0.4" targetFramework="xamarinios10" />
   <package id="Xamarin.FFImageLoading" version="2.2.25" targetFramework="xamarinios10" />
   <package id="Xamarin.FFImageLoading.Forms" version="2.2.25" targetFramework="xamarinios10" />
